fixed horizontal scroll and updated contact page

--- a/contact.css
+++ b/contact.css
@@ -5,11 +5,12 @@ html {
 h1 {
     color: rgb(255, 255, 255);
     text-align: center;
+    font-size: 50px
 }
 
 img {
-    margin-left: 46.5%;
-    margin-right: 50%;
+    margin-left: 47%;
+    margin-right: 40%;
 }
 
 footer {
